# s_web

./: .gitignore  .gitmodules  Cargo.toml  HYPER_FIX.md  README.md  README_CN.md  REFACTOR.md  REFACTORING_SUMMARY.md  test_unified_handler.rs
core/: Cargo.toml
core/src/: context.rs  engine.rs  handler.rs  lib.rs  middleware.rs  response.rs  router.rs  swagger.rs  trie.rs
examples/: middleware_param_test.rs
examples/01_hello_world/: Cargo.toml
examples/01_hello_world/src/: main.rs
examples/02_json_api/: Cargo.toml
examples/02_json_api/src/: main.rs
examples/03_middleware/: Cargo.toml
examples/03_middleware/src/: main.rs
examples/04_todo_app/: Cargo.toml
examples/04_todo_app/src/: main.rs
examples/05_swagger/: Cargo.toml
examples/05_swagger/src/: main.rs
examples/06_sqlx_sqlite_crud/: Cargo.toml
examples/06_sqlx_sqlite_crud/src/: main.rs
examples/07_seaorm_sqlite_crud/: Cargo.toml
examples/07_seaorm_sqlite_crud/src/: main.rs  product.rs
examples/08_mini_blog/: Cargo.toml  README.md
examples/08_mini_blog/src/: app.rs  db.rs  dto.rs  error.rs  main.rs  middleware.rs  models.rs  repository.rs
examples/08_mini_blog/src/handlers/: comments.rs  examples.rs  mod.rs  posts.rs
examples/advanced_features/: Cargo.toml  README.md
examples/advanced_features/src/: handlers.rs  main.rs  middleware.rs
examples/api_example/: Cargo.toml
examples/api_example/src/: main.rs  struct_conversion_example.rs
examples/api_guide/: Cargo.toml
examples/api_guide/src/: main.rs
examples/article_system_example/: Cargo.toml  README.md
examples/article_system_example/data/: app.db
examples/article_system_example/frontend/: articles.html  create-article.html  index.html  login.html  register.html
examples/article_system_example/frontend/css/: style.css
examples/article_system_example/frontend/js/: app.js  articles.js  auth.js  create-article.js
examples/article_system_example/src/: main.rs
examples/article_system_example/src/config/: app_state.rs
examples/article_system_example/src/db/: mod.rs  sqlite.rs
examples/article_system_example/src/handlers/: article.rs  auth.rs  mod.rs
examples/article_system_example/src/middleware/: auth.rs  mod.rs
examples/article_system_example/src/models/: article.rs  mod.rs  user.rs
examples/article_system_example/src/routes/: article_routes.rs  auth_routes.rs  base_routes.rs  mod.rs
examples/chain_example/: Cargo.toml  README.md
examples/chain_example/src/: main.rs
examples/custom_response_example/: Cargo.toml  README.md
examples/custom_response_example/src/: main.rs
examples/database_example/: Cargo.toml  README.md  database.db
examples/database_example/src/: main.rs
examples/database_example/templates/: index.html
examples/hello_world/: Cargo.toml  README.md
examples/hello_world/src/: handlers.rs  main.rs
examples/large_app_example/: README.md
examples/large_app_example/src/: main.rs
examples/large_app_example/src/middleware/: auth.rs  cache.rs  logging.rs  mod.rs
examples/large_app_example/src/routes/: mod.rs  product_routes.rs  user_routes.rs
examples/lifecycle_example/: Cargo.toml  README.md
examples/lifecycle_example/src/: main.rs  simple.rs
examples/middleware_demo/: Cargo.toml
examples/middleware_demo/src/: main.rs
examples/middleware_example/: Cargo.toml
examples/middleware_example/src/: main.rs
examples/middleware_guide/: Cargo.toml
examples/middleware_guide/src/: main.rs
examples/swagger_custom_example/: Cargo.toml
examples/swagger_custom_example/src/: main.rs
examples/swagger_example/: Cargo.toml
examples/swagger_example/src/: main.rs
examples/upload_example/: Cargo.toml
examples/upload_example/src/: main.rs
ree-macros/: Cargo.toml
ree-macros/src/: lib.rs
src/: context.rs  engine.rs  handler.rs  lib.rs  main.rs  middleware.rs  ree.rs  response.rs  router.rs  tire.rs  trie.rs
uploads/: test.txt
