[workspace]
members = [
    "core",
    "examples/api_example",
    "examples/middleware_example", 
    "examples/database_example",
    "examples/article_system_example",
    "examples/chain_example",
    "examples/custom_response_example",
    "examples/upload_example",
    "examples/lifecycle_example",
    "examples/swagger_custom_example",
]
resolver = "2"
