[workspace]
members = [
    "core",
    "examples/api_example",
    "examples/middleware_example", 
    "examples/database_example",
    "examples/article_system_example",
    "examples/chain_example",
    "examples/custom_response_example",
    "examples/upload_example",
    "examples/lifecycle_example",
    "examples/swagger_custom_example",
]
resolver = "2"

[workspace.dependencies]
# Core web framework dependencies
hyper = { version = "1.8.1", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.18", features = ["full"] }
async-trait = "0.1.89"

# Serialization (通用依赖)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Internal dependencies
s_web = { path = "core" }
