[workspace]
members = [
    "core",
    "examples/01_hello_world",
    "examples/02_json_api",
    "examples/03_middleware",
    "examples/04_todo_app",
    "examples/05_swagger",
    "examples/06_sqlx_sqlite_crud",
    "examples/07_seaorm_sqlite_crud",
]
resolver = "2"

[workspace.dependencies]
# Core web framework dependencies
hyper = { version = "1.8.1", features = ["full"] }
tokio = { version = "1.50.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["full"] }
async-trait = "0.1.89"

# Query string parsing
form_urlencoded = "1.2.2"

# Serialization (通用依赖)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Internal dependencies
s_web = { path = "core" }
