[package]
name = "s_web"
version = "0.1.1"
edition = "2024"
description = "A simple HTTP framework for Rust"
license = "MIT"
authors = ["826216325@qq.com"]
repository = "https://github.com/secheng722/ree"
keywords = ["http", "web", "framework", "async"]
categories = ["web-programming::http-server"]

[dependencies]
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.16", features = ["full"] }
async-trait = "0.1.89"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
