[package]
name = "s_web"
version = "0.1.1"
edition = "2024"  # 建议使用 2021，2024 还不够稳定
description = "A modern, simple and efficient Rust HTTP framework with zero-cost functional middleware"
license = "MIT"
authors = ["826216325@qq.com"]
repository = "https://github.com/secheng722/s_web"
homepage = "https://github.com/secheng722/s_web"
documentation = "https://docs.rs/s_web"
readme = "README.md"
keywords = ["http", "web", "framework", "async", "middleware"]
categories = ["web-programming::http-server"]

# 排除不必要的文件
exclude = [
    "examples/*",
    "tests/*",
    ".git*",
    ".vscode/*",
    "target/*"
]

[dependencies]
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.16", features = ["full"] }
async-trait = "0.1.89"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
