[package]
name = "s_web"
version = "0.1.1"
edition = "2024"  
description = "A modern, simple and efficient Rust HTTP framework with zero-cost functional middleware"
license = "MIT"
authors = ["826216325@qq.com"]
repository = "https://github.com/secheng722/s_web"
homepage = "https://github.com/secheng722/s_web"
documentation = "https://docs.rs/s_web"
readme = "README.md"
keywords = ["http", "web", "framework", "async", "middleware"]
categories = ["web-programming::http-server"]

# 排除不必要的文件
exclude = [
    "examples/*",
    "tests/*",
    ".git*",
    ".vscode/*",
    "target/*"
]

[dependencies]
hyper = { workspace = true }
tokio = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
