[package]
name = "advanced_features"
version = "0.1.0"
edition = "2021"

[dependencies]
ree = { path = "../.." }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.88"
