[package]
name = "ree_test"
version = "0.1.0"
edition = "2021"

[dependencies]
s_web = { path = "../../core" }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"