[package]
name = "ree_test"
version = "0.1.0"
edition = "2021"

[dependencies]
s_web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["use_pem", "rust_crypto"] }