[package]
name = "database_example"
version = "0.1.0"
edition = "2024"

[dependencies]
s_web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
