[package]
name = "lifecycle_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lifecycle_example"
path = "src/main.rs"

[[bin]]
name = "simple"
path = "src/simple.rs"

[dependencies]
s_web = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.42", features = ["serde"] }
