[package]
name = "middleware_example"
version = "0.1.0"
edition = "2024"

[dependencies]
ree = { path = "../../core" }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
