[package]
name = "middleware_example"
version = "0.1.0"
edition = "2024"

[dependencies]
s_web = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { version = "1.18.1", features = ["v4"] }
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
